--- a/login system/login.html
+++ b/login system/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ResumeExpert – Upload</title>
+  <title>ResumeExpert – Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="dark-theme">
@@ -14,44 +14,63 @@
       <img src="ResumeXpert.png" alt="ResumeXpert Logo" class="logo">
       <span class="brand">ResumeExpert</span>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="upload.html" class="active">Analyzer</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="upload.html">Analyzer</a></li>
         <li><a href="ranking/job-ranking.html">Ranking</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </div>
     <div class="nav-right">
-      <a href="login system/login.html" class="login-btn">Log In</a>
-      <a href="#" class="signup-btn">Sign Up</a>
+      <a href="login.html" class="login-btn">Log In</a>
+      <a href="signup.html" class="signup-btn">Sign Up</a>
     </div>
   </nav>
 
+  <!-- Login Form -->
+  <section class="login-form">
     <h1>Login</h1>
-    <input type="text" id="login-username" placeholder="Username">
-    <input type="password" id="login-password" placeholder="Password">
-    <button id="login-button" onclick="login()">Login</button>
-    <p id="status"> </p>
+  <form>
+    <div class="input-group">
+      <label for="login-username">Username</label>
+      <input type="text" id="login-username" placeholder="Enter your username" required>
+    </div>
 
-    <script>
-        function login() {
-            const username = document.getElementById("login-username").value;
-            const password = document.getElementById("login-password").value;
-            
+    <div class="input-group">
+      <label for="login-password">Password</label>
+      <input type="password" id="login-password" placeholder="Enter your password" required>
+    </div>
 
-            fetch("https://resumexpert-dev.onrender.com/api/login", {
-                credentials: "include",
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({ username, password })
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("status").innerHTML = data.message || data.error;
-            });
-        }
-    </script>
+    <button id="login-button" type="button" onclick="login()">Login</button>
+    <p id="status"></p>
+  </form>
+</section>
+
+
+
+  <!-- Script -->
+  <script>
+    function login() {
+      const username = document.getElementById("login-username").value;
+      const password = document.getElementById("login-password").value;
+
+      fetch("https://resumexpert-dev.onrender.com/api/login", {
+        credentials: "include",
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ username, password })
+      })
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById("status").innerHTML = data.message || data.error;
+      });
+    }
+  </script>
+
+<footer class="footer">
+    Copyright © 2025 | All Rights Reserved
+  </footer>
 
 </body>
 </html>
