--- a/login system/logout.html
+++ b/login system/logout.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logout</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logout</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Logging out...</h1>
-    <p>You are being logged out. Please wait...</p>
 
-    <script>
-        // Function to handle logout
-        async function logout() {
-            try {
-                const response = await fetch('https://resumexpert-dev.onrender.com/api/logout', {
-                    method: 'GET',
-                    credentials: 'include' // This ensures cookies are sent with the request
-                });
-                
-                const data = await response.json();
-                
-                if (response.ok) {
-                    // Redirect to login page after successful logout
-                    window.location.href = 'login system/login.html';
-                } else {
-                    alert('Error logging out: ' + data.message);
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('An error occurred while logging out');
-            }
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="nav-left">
+      <img src="ResumeXpert.png" alt="Logo" class="logo">
+      <span class="brand">ResumeExpert</span>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="upload.html">Analyzer</a></li>
+        <li><a href="ranking/job-ranking.html">Ranking</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+    <div class="nav-right">
+      <a href="login.html" class="login-btn">Log In</a>
+      <a href="signup.html" class="signup-btn">Sign Up</a>
+    </div>
+  </nav>
+
+  <!-- Logout Message -->
+<div class="logout-container">
+  <img src="logout.png" alt="Logout Icon" class="logout-image">
+  <div class="logout-message">You have been logged out.</div>
+  <div class="redirect-note">Returning to homepage . . .</div>
+</div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    Copyright © 2025 | All Rights Reserved
+  </footer>
+
+  <!-- Script to handle logout -->
+  <script>
+    async function logout() {
+      try {
+        const response = await fetch('https://resumexpert-dev.onrender.com/api/logout', {
+          method: 'GET',
+          credentials: 'include'
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          // Redirect to home after 3 seconds
+          setTimeout(() => {
+            window.location.href = 'index.html';
+          }, 3000);
+        } else {
+          alert('Error logging out: ' + data.message);
         }
+      } catch (error) {
+        console.error('Error:', error);
+        alert('An error occurred while logging out');
+      }
+    }
 
-        // Call logout function when page loads
-        window.onload = logout;
-    </script>
+    window.onload = logout;
+  </script>
+
 </body>
 </html>
