complete ranking system functionality

--- a/index.html
+++ b/index.html
@@ -7,23 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="dark-theme">
-
-  <nav class="navbar">
-    <div class="nav-left">
-      <img src="ResumeXpert.png" alt="ResumeXpert Logo" class="logo">
-      <span class="brand">ResumeExpert</span>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="upload.html">Analyzer</a></li>
-        <li><a href="ranking/job-ranking.html">Ranking</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-    <div class="nav-right">
-      <a href="login system/login.html" class="login-btn">Log In</a>
-      <a href="#" class="signup-btn">Sign Up</a>
-    </div>
-  </nav>
+  <!-- Navbar placeholder -->
+  <div id="navbar-placeholder"></div>
 
   <main class="hero-section">
     <div class="hero-content">
@@ -48,5 +33,6 @@
     Copyright © 2025 | All Rights Reserved
   </footer>
 
+  <script src="navbar.js"></script>
 </body>
 </html>
