--- a/login system/logout.html
+++ b/login system/logout.html
@@ -52,7 +52,7 @@
         if (response.ok) {
           // Redirect to home after 3 seconds
           setTimeout(() => {
-            window.location.href = 'index.html';
+            window.location.href = '/index.html';
           }, 3000);
         } else {
           alert('Error logging out: ' + data.message);
