--- a/jobListing.html
+++ b/jobListing.html
@@ -6,30 +6,22 @@
   <title>ResumeExpert – Job Listings</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header>
-    <div class="nav-container">
-      <div class="logo">ResumeExpert</div>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#" class="active">Analyzer</a>
-        <a href="#">Ranking</a>
-        <a href="#">About</a>
-      </nav>
-      <div class="auth-buttons">
-        <a href="#" class="login">Log In</a>
-        <a href="#" class="signup">Sign Up</a>
-      </div>
-    </div>
-  </header>
+<body class="dark-theme">
+  <!-- Navbar placeholder -->
+  <div id="navbar-placeholder"></div>
 
-  <main>
+  <main class="container">
     <h1 class="main-title">IT Developer jobs</h1>
     <section id="job-listings" class="job-grid">
       <!-- Cards will be populated by JS -->
     </section>
   </main>
 
+  <footer class="footer">
+    Copyright © 2025 | All Rights Reserved
+  </footer>
+
+  <script src="navbar.js"></script>
   <script src="jobs.js"></script>
 </body>
 </html>
