--- a/ranking/view-jobs.html
+++ b/ranking/view-jobs.html
@@ -11,6 +11,7 @@
     <div id="navbar-placeholder"></div>
 
     <main class="container">
+        <h1 id="greeting">Loading...</h1>
         <h1>Created Jobs</h1>
         <button class="create-btn" onclick="window.location.href='new-job-position.html'">New Job Ranking</button>
         
@@ -26,6 +27,20 @@
     <script src="../navbar.js"></script>
     <script src="auth.js"></script>
     <script>
+        async function fetchUsername() {
+            try {
+                const response = await fetch('https://resumexpert-dev.onrender.com/api/check-session', {
+                    credentials: 'include'
+                });
+                const data = await response.json();
+                if (data.loggedIn) {
+                    document.getElementById('greeting').textContent = `Hello ${data.username}`;
+                }
+            } catch (error) {
+                console.error('Error fetching username:', error);
+            }
+        }
+
         async function fetchJobs() {
             // Check authentication first
             const isAuthenticated = await checkAuth();
@@ -80,8 +95,11 @@
             }
         }
 
-        // Fetch jobs when the page loads
-        document.addEventListener('DOMContentLoaded', fetchJobs);
+        // Fetch username and jobs when the page loads
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchUsername();
+            fetchJobs();
+        });
     </script>
 </body>
 </html>
